@@ -9,10 +9,11 @@ tar xfz "mongodb-linux-x86_64-${MONGODB_VERSION}.tgz"
 
 # htslib & samtools
 if [ ! "$(ls -A htslib)" ]; then
-git clone --branch "${HTSLIB_VERSION}" --depth 1 https://github.com/wtsi-npg/htslib.git htslib
+git clone --branch "${HTSLIB_VERSION}" --depth 1 https://github.com/samtools/htslib.git htslib
 pushd htslib
 autoreconf -fi
-./configure --prefix=/tmp --enable-plugins
+git reset --hard
+./configure --prefix=/tmp/local --enable-libcurl
 make
 make install
 popd
@@ -28,7 +29,8 @@ curl -L 'http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=blob_plain
 popd
 aclocal -I acinclude.m4
 autoreconf -i
-./configure --prefix=/tmp --with-htslib=/tmp/htslib --enable-plugins
+git reset --hard
+LIBS='-lcurl -lcrypto -lssl' ./configure --prefix=/tmp/local --with-htslib=/tmp/htslib --without-curses
 make
 popd
 fi
