@@ -1,5 +1,7 @@
 LIST OF CHANGES for npg_ranger project
 
+  - switch to htslib@1.3.2 with curl support and samtools@1.3.1-npg-Sep2016
+    in Travis
   - remove forwarding protocol from proxy, use protocol only from conf
   - upgrade moment to 2.17.0 from 2.16.0
   - upgrade mongodb to 2.2.12 from 2.2.11
